--- a/ebook.html
+++ b/ebook.html
@@ -135,20 +135,20 @@
                 <ul class="nav-menu">
                     <li><a href="index.html">หน้าแรก</a></li>
                     <li><a href="index.html#tracks">หลักสูตร</a></li>
+                    <li><a href="index.html#booking-calendar">ปฏิทินการอบรม</a></li>
                     <li><a href="index.html#features">ฟีเจอร์</a></li>
                     <li class="nav-item-dropdown">
-                        <a href="index.html#certification">ใบรับรอง ▾</a>
+                        <a href="#certification">ใบรับรอง ▾</a>
                         <ul class="dropdown-menu">
                             <li><a href="https://e-report.dsd.go.th/certificateservice" target="_blank">ค้นหาวุฒิบัตร
                                     (DSD)</a></li>
                         </ul>
                     </li>
-                    <li><a href="ebook.html" class="active" style="color: var(--text-white);">E-Book</a></li>
                     <li><a href="index.html#corporate">องค์กร</a></li>
                 </ul>
                 <div class="nav-actions">
-                    <a href="https://lin.ee/epoe1vZ" target="_blank" class="btn-secondary">รับข่าวสาร</a>
-                    <a href="online-courses-form.html" class="btn-primary">ลงทะเบียน</a>
+                    <a href="#subscribe" class="btn-subscribe">รับข่าวสาร</a>
+                    <a href="index.html#tracks" class="btn-register-nav">ลงทะเบียน</a>
                 </div>
                 <button class="mobile-menu-toggle" aria-label="Toggle menu">
                     <span></span>
