--- a/online-courses-form.html
+++ b/online-courses-form.html
@@ -26,10 +26,20 @@
                 <ul class="nav-menu">
                     <li><a href="index.html">หน้าแรก</a></li>
                     <li><a href="index.html#tracks">หลักสูตร</a></li>
-                    <li><a href="ebook.html">E-Book</a></li>
+                    <li><a href="index.html#booking-calendar">ปฏิทินการอบรม</a></li>
+                    <li><a href="index.html#features">ฟีเจอร์</a></li>
+                    <li class="nav-item-dropdown">
+                        <a href="#certification">ใบรับรอง ▾</a>
+                        <ul class="dropdown-menu">
+                            <li><a href="https://e-report.dsd.go.th/certificateservice" target="_blank">ค้นหาวุฒิบัตร
+                                    (DSD)</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="index.html#corporate">องค์กร</a></li>
                 </ul>
                 <div class="nav-actions">
-                    <a href="https://lin.ee/ws5lf1M" target="_blank" class="btn-secondary">ติดต่อเรา</a>
+                    <a href="#subscribe" class="btn-subscribe">รับข่าวสาร</a>
+                    <a href="index.html#tracks" class="btn-register-nav">ลงทะเบียน</a>
                 </div>
             </div>
         </div>
