--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <body>
     <!-- Navigation -->
+    <!-- Navigation -->
     <nav class="navbar">
         <div class="container">
             <div class="nav-wrapper">
@@ -38,16 +39,21 @@
                     <li><a href="#corporate">องค์กร</a></li>
                 </ul>
                 <div class="nav-actions">
-                    <a href="https://lin.ee/epoe1vZ" target="_blank" class="btn-secondary">รับข่าวสาร</a>
-                    <a href="#open-registration" class="btn-primary">ลงทะเบียน</a>
+                    <a href="#subscribe" class="btn-subscribe">รับข่าวสาร</a>
+                    <a href="#tracks" class="btn-register-nav">ลงทะเบียน</a>
                 </div>
-                <button class="mobile-menu-toggle" aria-label="Toggle menu">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </button>
             </div>
         </div>
+    </nav> <a href="https://lin.ee/epoe1vZ" target="_blank" class="btn-secondary">รับข่าวสาร</a>
+    <a href="#open-registration" class="btn-primary">ลงทะเบียน</a>
+    </div>
+    <button class="mobile-menu-toggle" aria-label="Toggle menu">
+        <span></span>
+        <span></span>
+        <span></span>
+    </button>
+    </div>
+    </div>
     </nav>
 
     <!-- Main Content -->
