--- a/index.html
+++ b/index.html
@@ -448,6 +448,27 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="courses-grid" style="margin-top: 2rem;">
+                    <div class="course-card">
+                        <div class="course-image">
+                            <div class="course-badge">ใหม่</div>
+                            <div class="placeholder-image"
+                                style="background: linear-gradient(135deg, #f2c811 0%, #e6b00e 100%);">📊</div>
+                        </div>
+                        <div class="course-content">
+                            <h3 class="course-title">Advanced Analyzing Data With Power BI</h3>
+                            <p class="course-description">ยกระดับการวิเคราะห์ข้อมูลด้วย Power BI ขั้นสูง สร้าง Dashboard
+                                แบบมืออาชีพ</p>
+                            <div class="course-meta">
+                                <span class="course-duration">⏱️ 18 ชั่วโมง</span>
+                                <span class="course-level">📊 ระดับสูง</span>
+                            </div>
+                            <a href="power-bi-course.html" class="btn-course"
+                                style="text-decoration: none; text-align: center; display: inline-block;">รายละเอียด</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
