--- a/index.html
+++ b/index.html
@@ -111,6 +111,29 @@
                 </div>
 
                 <div class="registration-grid">
+                    <!-- Course 0: AI Fundamentals (New) -->
+                    <div class="registration-card" data-course="ai-fundamental">
+                        <div class="registration-image">
+                            <div class="registration-status" style="background: #ffa000;">ใหม่! เปิดรับสมัคร</div>
+                            <div class="placeholder-reg-image"
+                                style="background: linear-gradient(135deg, #1a0b3b 0%, #4a148c 100%);">
+                                <span class="reg-icon">🤖</span>
+                            </div>
+                        </div>
+                        <div class="registration-content">
+                            <h3 class="registration-title">หลักสูตร พื้นฐานระบบปัญญาประดิษฐ์</h3>
+                            <p class="registration-subtitle">AI Fundamentals for Career Development - สถาบันฯ 3 ชลบุรี
+                            </p>
+                            <div class="registration-info">
+                                <div class="info-item">
+                                    <span class="info-icon">📅</span>
+                                    <span>21-22 และ 28-29 มีนาคม 2569</span>
+                                </div>
+                            </div>
+                            <a href="ai-fundamental-form.html" class="btn-register">ดูรายละเอียดและลงทะเบียน</a>
+                        </div>
+                    </div>
+
                     <!-- Course 1: AI for Logistics -->
                     <div class="registration-card" data-course="ai-logistics">
                         <div class="registration-image">
