--- a/ai-fundamental-form.html
+++ b/ai-fundamental-form.html
@@ -179,13 +179,17 @@
         <div class="modal-overlay"></div>
         <div class="modal-content success-modal">
             <div class="success-icon">✨</div>
-            <h2>ขอบคุณที่ลงทะเบียน</h2>
-            <p class="registrant-name">คุณ <span id="successName">--</span></p>
-            <p>ระบบได้รับข้อมูลการสมัครของท่านเรียบร้อยแล้ว</p>
+            <h2>ขอบคุณที่สมัคร<br>หลักสูตรพื้นฐานระบบปัญญาประดิษฐ์</h2>
+
+            <div class="success-details">
+                <p class="detail-item"><strong>ชื่อ-สกุล :</strong> <span id="successName">--</span></p>
+                <p class="detail-item"><strong>ลำดับที่สมัคร :</strong> <span id="queueNumber"
+                        style="color: var(--accent-gold); font-size: 1.5rem; font-weight: 800;">--</span></p>
+            </div>
 
             <div class="modal-actions">
                 <a href="https://www.facebook.com/tabunchon" target="_blank" class="btn-facebook">
-                    🔵 ติดตามข่าวสารได้ที่ Facebook
+                    🔵 โปรดติดตามข่าวสาร Facebook
                 </a>
                 <a href="https://lin.ee/ws5lf1M" target="_blank" class="btn-line">
                     🟢 สอบถามเพิ่มเติมทาง LINE
