--- a/ai-fundamental-form.html
+++ b/ai-fundamental-form.html
@@ -194,6 +194,9 @@
                 <a href="https://lin.ee/ws5lf1M" target="_blank" class="btn-line">
                     🟢 สอบถามเพิ่มเติมทาง LINE
                 </a>
+                <a href="tel:038276445" class="btn-phone">
+                    📞 โทรศัพท์: 038-276-445 (วันเวลาราชการ)
+                </a>
             </div>
 
             <button class="btn-close-modal" onclick="closeSuccessModal()">ปิดหน้าต่าง</button>
